--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,16 +10,16 @@
 </head>
 <body>
   <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+    <div class="nav-wrapper container center">
+      <a id="logo-container" href="#" class="brand-logo left">RBC</a>
+      <!-- <ul class="right hide-on-med-and-down">
+        <li><a href="#">Nav Link</i></a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#"><i class="material-icons">shopping_cart</i></a></li>
       </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a> -->
     </div>
   </nav>
 
@@ -27,7 +27,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center teal-text text-lighten-2">Rubber Ducky Consulting</h1>
         <div class="row center">
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
@@ -38,7 +38,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/sunsetducky.jpg" id="par-1" alt="Unsplashed background img 1"></div>
   </div>
 
 
