--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img src="assets/sunsetducky.jpg"></div>
+    <div class="parallax"><img src="assets/parra-1.jpg" class="parralax-images"></div>
   </div>
   <div class="section white">
     <div class="row container">
@@ -9,5 +9,5 @@
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="images/parallax2.jpg"></div>
+    <div class="parallax"><img src="assets/parra-2.jpg" class="parralax-images"></div>
   </div>
