--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,41 @@
+<!-- First Parralax container -->
 <div class="parallax-container">
-    <div class="parallax"><img src="assets/parra-1.jpg" class="parralax-images"></div>
-  </div>
-  <div class="section white">
-    <div class="row container">
-      <h2 class="header">Product Show</h2>
-      <p class="grey-text text-darken-3 lighten-3">
-        Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+  <div class="parallax"><img src="assets/parra-1.jpg" class="parralax-images"></div>
+</div>
+
+<!--   Icon Section   -->
+<div class="container">
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+        <h5 class="center">Speeds up development</h5>
+
+        <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+        <h5 class="center">User Experience Focused</h5>
+
+        <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+        <h5 class="center">Easy to work with</h5>
+
+        <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+      </div>
     </div>
   </div>
-  <div class="parallax-container">
-    <div class="parallax"><img src="assets/parra-2.jpg" class="parralax-images"></div>
-  </div>
+</div>
+
+<!-- Second Parralax container -->
+<div class="parallax-container">
+  <div class="parallax"><img src="assets/parra-2.jpg" class="parralax-images"></div>
+</div>
