--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -23,8 +23,8 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html">Services</a></li>
-        <li><a href="collapsible.html">Inquire</a></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
+        <li><a href="badges.html">Inquire</a></li>
+        <li><a href="collapsible.html">Pay</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Services</a></li>
