changed devise notices-alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,9 +38,8 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="assets/materialize.js"></script>
 
-  <% flash.each do |type, msg| %>
-    <%= content_tag :p, msg, class: type %>
-  <% end %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
