--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,21 +19,27 @@
   <!-- NAVBAR starts here -->
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">RBC</a>
+      <%= link_to "RDC", root_path, class: "brand-logo", :"data-no-turbolink" => true %>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
+        <%if user_signed_in? %>
+        <li><%= link_to "Pay", new_charge_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
         <li><a href="sass.html">Services</a></li>
         <li><a href="collapsible.html">Inquire</a></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Login", new_user_session_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% end %>
       </ul>
       <ul class="side-nav" id="mobile-demo">
+        <%if user_signed_in? %>
+        <li><%= link_to "Pay", new_charge_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
         <li><a href="sass.html">Services</a></li>
         <li><a href="badges.html">Inquire</a></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Login", new_user_session_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
