recreated invoices controller

--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,5 +1,2 @@
-<div id="invoice_edit">
-  <div class="container">
-    <h2>Invoice Edit View</h2>
-  </div>
-</div>
+<h1>Invoices#edit</h1>
+<p>Find me in app/views/invoices/edit.html.erb</p>
