--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,5 +1,2 @@
-<div id="invoice_index">
-  <div class="container">
-    <h2>Invoice Index View</h2>
-  </div>
-</div>
+<h1>Invoices#index</h1>
+<p>Find me in app/views/invoices/index.html.erb</p>
