--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,5 +1,2 @@
-<div id="invoice_new">
-  <div class="container">
-    <h2>Invoice New View</h2>
-  </div>
-</div>
+<h1>Invoices#new</h1>
+<p>Find me in app/views/invoices/new.html.erb</p>
