--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,5 +1,2 @@
-<div id="invoice_show">
-  <div class="container">
-    <h2>Invoice Show View</h2>
-  </div>
-</div>
+<h1>Invoices#show</h1>
+<p>Find me in app/views/invoices/show.html.erb</p>
