set up invoices show

--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -3,12 +3,13 @@
       <% @invoices.each do |invoice| %>
         <p>
           <b>Date:</b> <%= invoice.date %><br>
+          <b>Invoice ID:</b> <%= invoice.id %><br>
           <b>Client Name:</b> <%= invoice.client_name %><br>
           <b>Project Name:</b> <%= invoice.project_name %><br>
           <b>Project Summary:</b> <%= invoice.project_summary %><br>
-          <b>Amount Due:</b> <%= invoice.amount_due %><br>
-
+          <b>Amount Due:</b> $<%= invoice.amount_due %><br>
         </p>
+        <hr />
       <% end %>
   </div>
 </div>
