--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -7,6 +7,7 @@
           <b>Project Name:</b> <%= @invoice.project_name %><br>
           <b>Project Summary:</b> <%= @invoice.project_summary %><br>
           <b>Amount Due:</b> $<%= @invoice.amount_due %><br>
+          <b>Status:</b> <%= yesno(@invoice.status) %><br>
         </p>
         <% if current_user[:role] === User.roles[:admin] %>
         <%= link_to 'Edit', edit_invoice_path(@invoice) %>
