--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -23,8 +23,15 @@
             </div>
           </div>
           <div class="row">
-            <div class="input-field col s12">
+            <div class="input-field col s6">
               <%= f.text_field :amount_due, :class => "validate" %>
+            </div>
+            <div class="input-field col s6">
+              <select class="browser-default">
+                <option value="" disabled selected>Payment Status</option>
+                <option value="True">Yes</option>
+                <option value="False">No</option>
+              </select>
             </div>
           </div>
           <button class="btn waves-effect waves-light" type="submit" name="action">Save Invoice</button>
