--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -31,7 +31,18 @@
               <%= f.text_field :amount_due, :class => "validate" %>
             </div>
           </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action">Save Invoice</button>
+          <div class="row">
+            <div class="input-field col s6">
+                <select class="browser-default">
+                  <option value="" disabled selected>Payment Status</option>
+                  <option value="True">Yes</option>
+                  <option value="False">No</option>
+                </select>
+            </div>
+            <div class="input-field col s6">
+              <button class="btn waves-effect waves-light" type="submit" name="action">Save Invoice</button>
+            </div>
+          </div>
           <% end %>
         </form>
       </div>
