--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -4,7 +4,7 @@
       <% @invoices.each do |invoice| %>
         <p>
           <b>Date:</b> <%= invoice.date %><br>
-          <b>Invoice ID:</b> <%= invoice.id %><br>
+          <b>Invoice ID:</b> <%= link_to invoice.id, invoice_path( Invoice.find(invoice.id) ) %><br>
           <b>Client Name:</b> <%= invoice.client_name %><br>
           <b>Project Name:</b> <%= invoice.project_name %><br>
           <b>Project Summary:</b> <%= invoice.project_summary %><br>
