--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -19,17 +19,29 @@
   <!-- NAVBAR starts here -->
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">RBC</a>
+      <%= link_to "RDC", root_path, class: "brand-logo", :"data-no-turbolink" => true %>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
+        <%if user_signed_in? %>
+        <li><%= link_to "Invoices", invoices_path %></li>
+        <li><%= link_to "Pay", new_charge_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
         <li><a href="sass.html">Services</a></li>
-        <li><a href="badges.html">Inquire</a></li>
-        <li><a href="collapsible.html">Pay</a></li>
+        <li><a href="collapsible.html">Inquire</a></li>
+        <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
       </ul>
       <ul class="side-nav" id="mobile-demo">
+        <%if user_signed_in? %>
+        <li><%= link_to "Invoices", invoices_path %></li>
+        <li><%= link_to "Pay", new_charge_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
         <li><a href="sass.html">Services</a></li>
         <li><a href="badges.html">Inquire</a></li>
-        <li><a href="collapsible.html">Pay</a></li>
+        <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
@@ -38,9 +50,8 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="assets/materialize.js"></script>
 
-  <% flash.each do |type, msg| %>
-    <%= content_tag :p, msg, class: type %>
-  <% end %>
+<!-- <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p> -->
 
 <%= yield %>
 
