--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <%if user_signed_in? %>
+        <li><%= link_to "Invoices", invoices_path %></li>
         <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
@@ -33,6 +34,7 @@
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <%if user_signed_in? %>
+        <li><%= link_to "Invoices", invoices_path %></li>
         <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
