removed and readded status boolean to invoice model

--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -29,8 +29,8 @@
             <div class="input-field col s6">
               <select class="browser-default">
                 <option value="" disabled selected>Payment Status</option>
-                <option value="True">Yes</option>
-                <option value="False">No</option>
+                <option value="true">Paid</option>
+                <option value="Unpaid">Unpaid</option>
               </select>
             </div>
           </div>
