--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,13 +1,15 @@
 <div id="invoice_index">
   <div class="container">
+      <h3>Invoices</h3>
       <% if current_user[:role] === User.roles[:admin] %>
-      <%= button_to 'Create new Invoice', new_invoice_path, method: :get %>
+        <%= button_to 'Create new Invoice', new_invoice_path, method: :get %>
       <% end %>
-      <% @invoices.each do |invoice| %>
-        <p>
-          <b>Date:</b> <%= invoice.date %><br>
+          <% @invoices.each do |invoice| %>
           <b>Invoice ID:</b> <%= link_to invoice.id, invoice_path( Invoice.find(invoice.id) ) %><br>
+          <b>Date:</b> <%= invoice.date %><br>
+          <% if current_user[:role] === User.roles[:admin] %>
           <b>Client Name:</b> <%= invoice.client_name %><br>
+          <% end %>
           <b>Project Name:</b> <%= invoice.project_name %><br>
           <b>Project Summary:</b> <%= invoice.project_summary %><br>
           <b>Amount Due:</b> $<%= invoice.amount_due %><br>
@@ -15,6 +17,9 @@
           <% if current_user[:role] === User.roles[:admin] %>
           <%= button_to 'Edit', edit_invoice_path(invoice.id), method: :get %>
           <%= button_to 'Delete', invoice, method: :delete %>
+          <% end %>
+          <% if invoice.status === false %>
+          <a class="waves-effect waves-light btn"><i class="material-icons left">shop</i>Pay</a>
           <% end %>
         </p>
         <hr />
