--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -35,8 +35,8 @@
             <div class="input-field col s6">
                 <select class="browser-default">
                   <option value="" disabled selected>Payment Status</option>
-                  <option value="true">Paid</option>
-                  <option value="false">Unpaid</option>
+                  <option value="0">Paid</option>
+                  <option value="1">Unpaid</option>
                 </select>
             </div>
             <div class="input-field col s6">
