--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <!--   Services Section   -->
-<div class="container">
+<div class="container"><a name="services"></a>
   <div class="row">
     <h1 class="titles">Services</h1>
     <div class="col s12 m4">
@@ -46,7 +46,7 @@
 </div>
 
 <!--   Inquire Section   -->
-<div class="container">
+<div class="container"><a name="inquire"></a>
   <div class="row">
     <h1 class="titles">Inquire</h1>
     <div class="col s12 m4">
