--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,8 @@
         <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
-        <li><a href="sass.html">Services</a></li>
-        <li><a href="collapsible.html">Inquire</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#inquire">Inquire</a></li>
         <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
@@ -38,8 +38,8 @@
         <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
-        <li><a href="sass.html">Services</a></li>
-        <li><a href="badges.html">Inquire</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#inquire>Inquire</a></li>
         <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
