--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -27,8 +27,8 @@
         <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
-        <li><a href="sass.html">Services</a></li>
-        <li><a href="collapsible.html">Inquire</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#inquire">Inquire</a></li>
         <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
@@ -38,8 +38,8 @@
         <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
-        <li><a href="sass.html">Services</a></li>
-        <li><a href="badges.html">Inquire</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#inquire>Inquire</a></li>
         <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
@@ -54,6 +54,32 @@
 <p class="alert"><%= alert %></p> -->
 
 <%= yield %>
+
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Footer Content</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Links</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © 2014 Copyright Text
+    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
