--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -10,7 +10,7 @@
               <%= f.text_field :client_name, :class => "validate" %>
             </div>
             <div class="input-field col s6">
-              <input type="date" class="datepicker">
+              <%= f.date_field :date %>
             </div>
           </div>
           <div class="row">
@@ -33,11 +33,11 @@
           </div>
           <div class="row">
             <div class="input-field col s6">
-                <select class="browser-default">
-                  <option value="" disabled selected>Payment Status</option>
-                  <option value="0">Paid</option>
-                  <option value="1">Unpaid</option>
-                </select>
+              <select multiple>
+                <option value="" disabled selected>Payment Status</option>
+                <option value="true">Paid</option>
+                <option value="false">Unpaid</option>
+              </select>
             </div>
             <div class="input-field col s6">
               <button class="btn waves-effect waves-light" type="submit" name="action">Save Invoice</button>
