--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -9,7 +9,7 @@
             <%= f.text_field :client_name, :class => "validate" %>
           </div>
           <div class="input-field col s6">
-            <input type="date" class="datepicker">
+            <%= f.date_field :date %>
           </div>
         </div>
         <div class="row">
