removed materialize js and css files and fonts folder

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -28,6 +28,7 @@
             });
 
             $('#pay_button').on('click', function(e) {
+              console.log("hiiiiii");
               // Open Checkout with further options:
               handler.open({
                 var amount = $("#amount").val() *100;
