--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -18,6 +18,7 @@
           <%= hidden_field_tag 'stripeToken' %>
           <%= hidden_field_tag 'stripeEmail' %>
           <%= hidden_field_tag 'stripeAmount' %>
+          <!-- Used to pass in invoice id into Stripe charge object -->
           <%= hidden_field_tag 'description' %>
           <a class="waves-effect waves-light btn"><i class="material-icons left" id="pay_button">shop</i>Pay</a>
 
@@ -30,6 +31,7 @@
                 document.getElementById("stripeToken").value = token.id;
                 document.getElementById("stripeEmail").value = token.email;
                 document.getElementById("stripeAmount").value = <%= @invoice.amount_due %>;
+                // Populate stripe description object with invoice id
                 document.getElementById("description").value = <%= @invoice.id %>;
                 document.getElementById("chargeForm").submit();
               }
