--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -10,7 +10,7 @@
               <%= f.text_field :client_name, :class => "validate" %>
             </div>
             <div class="input-field col s6">
-              <%= f.date_field :date %>
+              <%= f.date_field :date, :class => "datepicker" %>
             </div>
           </div>
           <div class="row">
