--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -6,8 +6,7 @@
         <form class="col s12">
           <div class="row">
             <div class="input-field col s6">
-              <%= f.label :client_name, "Client Name" %>
-              <%= f.text_field :client_name, :class => "validate" %>
+              <%= f.select :user_id, { Mattell: 37, NBC: 38 }, :prompt => 'Client Name' %>
             </div>
             <div class="input-field col s6">
               <%= f.date_field :date, :class => "datepicker" %>
