configure email and added label to datepicker

--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -9,6 +9,7 @@
               <%= f.select :user_id, { Mattell: 37, NBC: 38 }, :prompt => 'Client Name' %>
             </div>
             <div class="input-field col s6">
+              <%= f.label :date, "Date" %>
               <%= f.date_field :date, :class => "datepicker" %>
             </div>
           </div>
